[project]
name = "factorregression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bt>=1.1.4",
    "numpy>=1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2,<3",
    "pandas-datareader>=0.10.0",
    "plotly>=5.22",
    "setuptools>=70",
    "statsmodels>=0.14",
    "streamlit>=1.36",
    "yfinance>=0.2.54",
]
